fix images width

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <h2>Playlist: Evening</h2>
   <p>I've created cover and concept arts for the album.</p>
 <figure>
-  <img src="playlist-evening/cover.jpg" style="height: 42em;">
+  <img src="playlist-evening/cover.jpg" style="width: 100%;">
 </figure>
 <figure>
   <img src="playlist-evening/panorama.png" style="width: 100%">
 </figure>
-<figure style="display: flex; flex-direction: row;">
-  <img src="playlist-evening/danko.jpg" style="width: 100%;">
-  <img src="playlist-evening/tim.jpg" style="width: 100%;">
+<figure style="display: flex; flex-direction: row; height: 21em;">
+  <img src="playlist-evening/danko.jpg" style="height: 100%;">
+  <img src="playlist-evening/tim.jpg" style="height: 100%;">
 </figure>
 <!--  <figcaption class="caption">Character Tim</figcaption> -->
 </section>
