--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>HTML 5 Boilerplate</title>
+<title>Kapkanov</title>
 <link rel="icon" type="image/x-icon" href="logo.svg">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -29,12 +29,12 @@
 <figure>
   <img src="playlist-evening/cover.jpg" style="width: 100%;">
 </figure>
-<figure>
+<figure style="max-width: 64rem;">
   <img src="playlist-evening/panorama.png" style="width: 100%">
 </figure>
-<figure style="display: flex; flex-direction: row; height: 21em;">
-  <img src="playlist-evening/danko.jpg" style="height: 100%;">
-  <img src="playlist-evening/tim.jpg" style="height: 100%;">
+<figure style="display: flex; flex-direction: row; max-width: 64rem">
+  <img src="playlist-evening/danko.jpg" style="width: 100%;">
+  <img src="playlist-evening/tim.jpg" style="width: 100%;">
 </figure>
 <!--  <figcaption class="caption">Character Tim</figcaption> -->
 </section>
