--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 <figure style="max-width: 64rem;">
   <img src="playlist-evening/panorama.png" style="width: 100%">
 </figure>
-<figure style="display: flex; flex-direction: row; max-width: 64rem">
+<figure>
   <img src="playlist-evening/danko.jpg" style="width: 100%;">
+</figure>
+<figure>
   <img src="playlist-evening/tim.jpg" style="width: 100%;">
 </figure>
 <!--  <figcaption class="caption">Character Tim</figcaption> -->
