--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
 <figure style="max-width: 64rem;">
   <img src="playlist-evening/panorama.png" style="width: 100%">
 </figure>
-<figure>
-  <img src="playlist-evening/danko.jpg" style="width: 100%;">
-</figure>
-<figure>
-  <img src="playlist-evening/tim.jpg" style="width: 100%;">
-</figure>
+<div style="display: flex; max-width: 64rem; flex-wrap: nowrap">
+  <img src="playlist-evening/danko.jpg" style="width: 50%;">
+  <img src="playlist-evening/tim.jpg" style="width: 50%;">
+</div>
 <!--  <figcaption class="caption">Character Tim</figcaption> -->
 </section>
 
