add playlist evenging template

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   <img src="playlist-evening/danko.jpg" style="width: 50%;">
   <img src="playlist-evening/tim.jpg" style="width: 50%;">
 </div>
+<figure style="max-width: 64rem;">
+  <img src="playlist-evening/boilerplate.jpg" style="width: 100%">
+</figure>
 <!--  <figcaption class="caption">Character Tim</figcaption> -->
 </section>
 
